[gd_scene load_steps=5 format=3 uid="uid://cb2qcpu3qs1lo"]

[ext_resource type="Script" path="res://pipes/pipes.gd" id="1_6pmo0"]
[ext_resource type="PackedScene" uid="uid://um2tam8drlet" path="res://laser/laser.tscn" id="1_b1qla"]
[ext_resource type="PackedScene" uid="uid://dro6105g6guhj" path="res://pipe/pipe.tscn" id="2_w84yo"]
[ext_resource type="AudioStream" uid="uid://1m6e4vuana50" path="res://assets/audio/score.wav" id="4_co1sd"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_6pmo0")

[node name="Laser" parent="." instance=ExtResource("1_b1qla")]

[node name="Upper" parent="." instance=ExtResource("2_w84yo")]
position = Vector2(0, -100)
rotation = 3.14159

[node name="Lower" parent="." instance=ExtResource("2_w84yo")]
position = Vector2(0, 100)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(145, 0)

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_co1sd")

[connection signal="body_entered" from="Laser" to="." method="_on_laser_body_entered"]
[connection signal="body_entered" from="Upper" to="." method="_on_pipes_body_entered"]
[connection signal="body_entered" from="Lower" to="." method="_on_pipes_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
